<package>
  <name>hardware</name>
  <version>0.0.0</version>
  <description>
    ROS meta-package containing pacman hardware.
  </description>
  <maintainer email="Mirela.Popa@uibk.ac.at">Mirela Popa</maintainer>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!--> PACKAGES </-->
  
  <!--> Kuka LWR </-->

  <!--> Torso UIBK </-->

  <!--> Torso UNIPI </-->

  <!--> Schunk Dexrous Hand </-->

  <!--> Pisa/IIT Soft Hand </-->

  <!--> Primesense Sensor </-->

  <!--> Kinect Sensor </-->


  <export>
    <metapackage/>
  </export>
</package>