<package>
  <name>hardware</name>
  <version>0.0.0</version>
  <description>
    ROS meta-package containing pacman hardware.
  </description>
  <maintainer email="Mirela.Popa@uibk.ac.at">Mirela Popa</maintainer>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!--> PACKAGES </-->
  
  <!--> Kuka LWR </-->
  <run_depend> lwr </run_depend>

  <!--> Torso UIBK </-->
  <run_depend> torso_uibk </run_depend>

  <!--> Torso UNIPI </-->

  <!--> Schunk Dexrous Hand </-->
  <run_depend> sdh </run_depend>

  <!--> Pisa/IIT Soft Hand </-->

  <!--> RGBD Sensor </-->
  <run_depend> rgbd_sensor </run_depend>
  
  <!--> UIBK robot assembly </-->
  <run_depend> uibk_robot </run_depend>

  <export>
    <metapackage/>
  </export>
</package>