<package>
  <name>planners</name>
  <version>0.0.0</version>
  <description>
    ROS meta-package containing pacman planners.
  </description>
  <maintainer email="Mirela.Popa@uibk.ac.at">Mirela Popa</maintainer>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!--> PACKAGES </-->
  
  <!--> Marerk's grasp planner </-->
  <run_depend>grasp_planner_BHAM</run_depend>

  <!--> MoveIt!-based path planner  </-->
  <run_depend>path_planner_UNIPI</run_depend>

  <!--> UIBK robot configuration for MoveIt!  </-->
  <run_depend>uibk_robot_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>