<package>
  <name>lwr</name>
  <version>0.0.0</version>
  <description>
    ROS meta-package containing lwr packages.
  </description>
  <maintainer email="Mirela.Popa@uibk.ac.at">Mirela Popa</maintainer>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!--> PACKAGES </-->
  
  <!--> Kuka LWR description</-->
  <run_depend> lwr_description </run_depend>

  <!--> Kuka LWR description</-->
  <run_depend> lwr_test </run_depend>

  <export>
    <metapackage/>
  </export>
</package>